tests/errors/compile_errors.efto
// Various compile errors.
var x = ; // expect error: [line 2:9] Error at ';': Expect expression.
